--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 
 /* Customize color themes here */
 :root {
@@ -69,12 +70,43 @@
     --sidebar-width-expand: 250px;
     --sidebar-width-collapse: 90px;
     --header-height: 70px;
+
+    scrollbar-color: #cbd5e0dd transparent;
+    scrollbar-width: thin;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #cbd5e0dd;
+    border-radius: 100vh;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #a0aec0;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+code {
+    font-family: theme('fontFamily.mono') !important;
+    @apply px-1 py-0.5 text-sm bg-light-50 rounded-sm;
+}
 
 p,
 h1,
