👓 Improving Input component documentation

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@
     --light-200: #FCFDFD;
     --light-300: #FBFBFC;
     --light-400: #F9FAFB;
-    --light-500: #F8F9FA;
+    --light-500: #E8E9EA;
     --light-600: #C6C7C8;
     --light-700: #959596;
     --light-800: #636464;
